tests/ui-msrv/transmute-illegal.stderr
error[E0277]: the trait bound `*const usize: AsBytes` is not satisfied
  --> $DIR/transmute-illegal.rs:14:30
   |
14 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                              |
   |                              the trait `AsBytes` is not implemented for `*const usize`
   |                              required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
           and 6 others
note: required by a bound in `POINTER_VALUE::transmute`
  --> $DIR/transmute-illegal.rs:14:30
   |
14 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `POINTER_VALUE::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy<AU16>: AsBytes` is not satisfied
  --> $DIR/transmute-illegal.rs:17:32
   |
17 | const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                |
   |                                the trait `AsBytes` is not implemented for `NotZerocopy<AU16>`
   |                                required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and 51 others
note: required by a bound in `SRC_NOT_AS_BYTES::transmute`
  --> $DIR/transmute-illegal.rs:17:32
   |
17 | const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SRC_NOT_AS_BYTES::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy<AU16>: FromBytes` is not satisfied
  --> $DIR/transmute-illegal.rs:20:47
   |
20 | const DST_NOT_FROM_BYTES: NotZerocopy<AU16> = transmute!(AU16(0));
   |                                               ^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy<AU16>`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and 37 others
note: required by a bound in `DST_NOT_FROM_BYTES::transmute`
  --> $DIR/transmute-illegal.rs:20:47
   |
20 | const DST_NOT_FROM_BYTES: NotZerocopy<AU16> = transmute!(AU16(0));
   |                                               ^^^^^^^^^^^^^^^^^^^ required by this bound in `DST_NOT_FROM_BYTES::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-illegal.rs:23:29
   |
23 | const INCREASE_SIZE: AU16 = transmute!(0u8);
   |                             ^^^^^^^^^^^^^^^
   |
   = note: source type: `u8` (8 bits)
   = note: target type: `AU16` (16 bits)
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-illegal.rs:26:27
   |
26 | const DECREASE_SIZE: u8 = transmute!(AU16(0));
   |                           ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AU16` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0512.
For more information about an error, try `rustc --explain E0277`.
